RESOLVED FIXED301883
[Navigation API] Fire an abort signal when aborting a NavigateEvent
https://bugs.webkit.org/show_bug.cgi?id=301883
Summary [Navigation API] Fire an abort signal when aborting a NavigateEvent
rupin
Reported 2025-11-03 12:47:48 PST
[Navigation API] Fire an abort signal when aborting a NavigateEvent
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-03 12:47:55 PST
rupin
Comment 2 2025-11-03 12:51:09 PST
EWS
Comment 3 2025-11-05 08:53:22 PST
Committed 302591@main (ee02162b1bf1): <https://commits.webkit.org/302591@main> Reviewed commits have been landed. Closing PR #53354 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.