[Navigation API] Fire an abort signal when aborting a NavigateEvent https://bugs.webkit.org/show_bug.cgi?id=301883 rdar://163957784

Reviewed by Tim Nguyen.

Step 2 of https://html.spec.whatwg.org/#abort-a-navigateevent signals an abort
on the event's abort controller. We also change the tests to reflect this in
the same way that this WPT change proposal does:
web-platform-tests/wpt#55707

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/anchor-download-intercept-reject.html:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/back-same-document-intercept-reject.html:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/location-href-intercept-reject.html:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-same-document-intercept-reject.html:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/reload-intercept-reject.html:
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::innerDispatchNavigateEvent):

Canonical link: https://commits.webkit.org/302591@main